[project]
name = "BusArrivalBot"
version = "0.1.0"
description = ""
authors = [
    {name = "Shao Hui"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "python-telegram-bot (>=22.2,<23.0)",
    "python-decouple (>=3.8,<4.0)",
    "scipy (>=1.16.0,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"